--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,77 @@
   color: aliceblue;
   padding: 20px;
   display: flex;
-  justify-content: center;
+}
+
+/* Navbar.css */
+.navbar {
+  background-color: #006769;
+  padding: 10px 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.navbar-logo {
+  font-size: 50px;
+  font-weight: bold;
+  color: #eeffb6;
+}
+
+.navbar-logo a {
+  color: #c6fd13;
+  text-decoration: none;
+}
+
+.navbar-links {
+  list-style-type: none;
+  display: flex;
+  margin: 0;
+  padding: 0;
+}
+
+.navbar-links li {
+  margin: 0 15px;
+}
+
+.navbar-links a {
+  color: #e6ff94;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.navbar-links a:hover {
+  color: #8ba33b;
+}
+
+@media (max-width: 768px) {
+  .navbar-links {
+    display: none;
+  }
+
+  .navbar.active .navbar-links {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    position: absolute;
+    top: 60px;
+    left: 0;
+    background-color: #333;
+  }
+
+  .navbar-links li {
+    margin: 10px 0;
+    text-align: center;
+  }
+}
+
+/*nadpisy / popisy */
+p {
+  color: #333;
+  font-size: 18px;
+  font-family: "Roboto", sans-serif;
+}
+h2 {
+  color: #333;
+  font-size: 30px;
 }
