--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,7 @@
 }
 
 .navbar-links {
+  font-family: "Roboto", sans-serif;
   list-style-type: none;
   display: flex;
   margin: 0;
@@ -43,6 +44,12 @@
 
 .navbar-links a:hover {
   color: #8ba33b;
+  transition: background 0.25s, box-shadow 0.15s;
+  color: #4c600a;
+  background: #c1f908;
+  box-shadow: 0px 4px 4px 0px #bbc49f;
+  padding: 5px;
+  border-radius: 5px;
 }
 
 @media (max-width: 768px) {
@@ -69,10 +76,18 @@
 /*nadpisy / popisy */
 p {
   color: #333;
-  font-size: 18px;
+  font-size: 17px;
   font-family: "Roboto", sans-serif;
 }
+h1,
 h2 {
   color: #333;
+  font-family: "Playwrite PT", cursive;
+}
+
+h2 {
   font-size: 30px;
+}
+h3 {
+  font-size: 20px;
 }
