--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
 body {
   color: rgb(226, 219, 219);
-  background-color: #aab0ad;
-  font-family: "Playwrite PT", cursive;
+  background-color: #bcc8c2;
 }
