--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,13 @@
   display: flex;
 }
 
+.headRun {
+  font-size: 66px;
+  font-family: "Playwrite PT", cursive;
+  padding: 20px;
+  margin: 20px 20px;
+}
+
 /* Navbar.css */
 .navbar {
   background-color: #006769;
@@ -90,4 +97,10 @@ h2 {
 }
 h3 {
   font-size: 20px;
+}
+
+.mainRaces {
+  font-size: 1.3rem;
+  margin: 10px auto;
+  padding: 5px 5px;
 }
